# economy-simulation

./: .gitignore  AUTOMATED-VERSIONING-SETUP.md  README.md  REFACTORING_SUMMARY.md  SECURE-VERSIONING-SETUP.md  SECURITY-COMPARISON.md  VERSIONING-GUIDE.md  VERSIONING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  epic.yml  feature_request.md  feature_request.yml  question.yml  task.yml
.github/scripts/: README.md  analyze_pr.py  analyze_version.py  requirements.txt
.github/workflows/: codeql.yml  version-check.yml
backend/-/: LICENSE.txt  pyproject.toml
backend/global_economy_sim/: __about__.py
backend/tests/e2e/: .gitkeep
backend/tests/integration/: .gitkeep
backend/tests/unit/: .gitkeep
