[project]
name = "economy-simulation"
version = "0.1.0"
description = "A full-scale global economy simulation engine."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Filip Herceg", email = "pvt.filip.herceg@gmail.com" }]
dependencies = [

]

[tool.hatch.metadata]
sources = ["backend/global-economy-sim"]

[tool.hatch.version]
path = "backend/global-economy-sim/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest"
]

[tool.hatch.envs.default.scripts]
test = "pytest backend/tests"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"